--- a/css/styles.css
+++ b/css/styles.css
@@ -1008,7 +1008,12 @@ progress {
   .offset-sm-2 {
     margin-left: 16.66666667%;
   }
-
+  .col-lg-5{
+    margin-right: 1px;
+  }
+  .col-lg-6{
+    margin-right: px;
+  }
   .offset-sm-3 {
     margin-left: 25%;
   }
